--- a/JAVASCRIPT/spaceInvader/css/main.css
+++ b/JAVASCRIPT/spaceInvader/css/main.css
@@ -36,6 +36,7 @@ footer {
   justify-content: center;
   align-items: center;
   background: #222;
+  position: relative;
 }
 .game {
   width: 800px;
@@ -116,6 +117,19 @@ footer {
   animation: pop-in 1s;
 }
 
+.displayFrame {
+  background-color: white;
+  color: black;
+}
+
+.shopItem {
+  display: inline-block;
+}
+
+.purchaseItems {
+  margin: auto;
+}
+
 .menu {
   display: none;
   position: absolute;
@@ -126,6 +140,16 @@ footer {
   border-radius: 10px;
   text-align: center;
   animation: pop-in 1s;
+}
+
+.dashboard {
+  color: white;
+  position: absolute;
+  top: 20px;
+}
+
+.roundCounter {
+  left: 600px;
 }
 
 .btn {
